# academy-capstone

./: .dockerignore  .env.template  .gitignore  .gitpod.yml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
dags/: ingest.py
infrastructure/: batch.tf  ecr.tf  provider.tf
src/capstone/: ingest.py
